--- a/.github/workflows/aks-deploy-alb-controller.yml
+++ b/.github/workflows/aks-deploy-alb-controller.yml
@@ -135,16 +135,21 @@ jobs:
             MC_RESOURCE_GROUP=$(az aks show --name $AKS_NAME --resource-group $RESOURCE_GROUP --query "nodeResourceGroup" -otsv | tr -d '\r')
             echo "MC_RESOURCE_GROUP=$MC_RESOURCE_GROUP" >> $GITHUB_ENV
 
-      - name: Export Environment Variables in powershell
+      - name: Export Environment Variables in PowerShell
         shell: pwsh
         run: |
           $env:CLUSTER_SUBNET_ID = (az vmss list --resource-group $env:MC_RESOURCE_GROUP --query '[0].virtualMachineProfile.networkProfile.networkInterfaceConfigurations[0].ipConfigurations[0].subnet.id' -o tsv)
           $vnet = az network vnet show --ids $env:CLUSTER_SUBNET_ID --query '[name, resourceGroup, id]' -o tsv
-          $env:VNET_NAME, $env:VNET_RESOURCE_GROUP, $env:VNET_ID = $vnet -split '\t'
+          $vnetData = $vnet -split "`t"
+          $env:VNET_NAME = $vnetData[0]
+          $env:VNET_RESOURCE_GROUP = $vnetData[1]
+          $env:VNET_ID = $vnetData[2]
+          
           echo "CLUSTER_SUBNET_ID=$env:CLUSTER_SUBNET_ID" >> $GITHUB_ENV
           echo "VNET_NAME=$env:VNET_NAME" >> $GITHUB_ENV
           echo "VNET_RESOURCE_GROUP=$env:VNET_RESOURCE_GROUP" >> $GITHUB_ENV
           echo "VNET_ID=$env:VNET_ID" >> $GITHUB_ENV
+
 
       - name: create a new subnet containing at least 250 available IP addresses and enable subnet delegation for the Application Gateway for Containers association resource if it doesn't exist
         shell: bash
