--- a/.github/workflows/aks-deploy-alb-controller.yml
+++ b/.github/workflows/aks-deploy-alb-controller.yml
@@ -139,8 +139,8 @@ jobs:
       - name: Export Environment Variables in PowerShell
         shell: pwsh
         run: |
-          $CLUSTER_SUBNET_ID = (az vmss list --resource-group $env:MC_RESOURCE_GROUP --query '[0].virtualMachineProfile.networkProfile.networkInterfaceConfigurations[0].ipConfigurations[0].subnet.id' -o tsv)
-          $vnet = az network vnet show --ids $env:CLUSTER_SUBNET_ID --query '[name, resourceGroup, id]' -o tsv
+          $CLUSTER_SUBNET_ID = (az vmss list --resource-group $MC_RESOURCE_GROUP --query '[0].virtualMachineProfile.networkProfile.networkInterfaceConfigurations[0].ipConfigurations[0].subnet.id' -o tsv)
+          $vnet = az network vnet show --ids $CLUSTER_SUBNET_ID --query '[name, resourceGroup, id]' -o tsv
           $vnetData = $vnet -split "`t"
           $VNET_NAME = $vnetData[0]
           $VNET_RESOURCE_GROUP = $vnetData[1]
@@ -153,10 +153,10 @@ jobs:
           echo $VNET_RESOURCE_GROUP
           echo $VNET_ID
 
-          echo "CLUSTER_SUBNET_ID=$env:CLUSTER_SUBNET_ID" >> $GITHUB_ENV
-          echo "VNET_NAME=$env:VNET_NAME" >> $GITHUB_ENV
-          echo "VNET_RESOURCE_GROUP=$env:VNET_RESOURCE_GROUP" >> $GITHUB_ENV
-          echo "VNET_ID=$env:VNET_ID" >> $GITHUB_ENV
+          echo "CLUSTER_SUBNET_ID=$CLUSTER_SUBNET_ID" >> $GITHUB_ENV
+          echo "VNET_NAME=$VNET_NAME" >> $GITHUB_ENV
+          echo "VNET_RESOURCE_GROUP=$VNET_RESOURCE_GROUP" >> $GITHUB_ENV
+          echo "VNET_ID=$VNET_ID" >> $GITHUB_ENV
 
 
       - name: create a new subnet containing at least 250 available IP addresses and enable subnet delegation for the Application Gateway for Containers association resource if it doesn't exist
