--- a/.github/workflows/aks-deploy-alb-controller.yml
+++ b/.github/workflows/aks-deploy-alb-controller.yml
@@ -139,7 +139,7 @@ jobs:
       - name: Export Environment Variables in PowerShell
         shell: pwsh
         run: |
-          echo "MC_RESOURCE GROOUP IS"
+          echo "MC_RESOURCE_GROUP IS"
           echo $env:MC_RESOURCE_GROUP
           $CLUSTER_SUBNET_ID = (az vmss list --resource-group $env:MC_RESOURCE_GROUP --query '[0].virtualMachineProfile.networkProfile.networkInterfaceConfigurations[0].ipConfigurations[0].subnet.id' -o tsv)
           $vnet = az network vnet show --ids $CLUSTER_SUBNET_ID --query '[name, resourceGroup, id]' -o tsv
@@ -147,18 +147,12 @@ jobs:
           $VNET_NAME = $vnetData[0]
           $VNET_RESOURCE_GROUP = $vnetData[1]
           $VNET_ID = $vnetData[2]
-          
-          echo $CLUSTER_SUBNET_ID
-          echo $vnet
-          echo $vnetData
-          echo $VNET_NAME
-          echo $VNET_RESOURCE_GROUP
-          echo $VNET_ID
 
           echo "CLUSTER_SUBNET_ID=$CLUSTER_SUBNET_ID" >> $env:GITHUB_ENV
           echo "VNET_NAME=$VNET_NAME" >> $env:GITHUB_ENV
           echo "VNET_RESOURCE_GROUP=$VNET_RESOURCE_GROUP" >> $env:GITHUB_ENV
           echo "VNET_ID=$VNET_ID" >> $env:GITHUB_ENV
+
 
 
       - name: create a new subnet containing at least 250 available IP addresses and enable subnet delegation for the Application Gateway for Containers association resource if it doesn't exist
