--- a/.github/workflows/aks-deploy-alb-controller.yml
+++ b/.github/workflows/aks-deploy-alb-controller.yml
@@ -108,6 +108,9 @@ jobs:
             echo $HELM_NAMESPACE
             # Install ALB Controller using Helm
             NAMESPACE_EXISTS=$(kubectl get namespaces | grep -w $HELM_NAMESPACE)
+            echo "NAMESPACE_EXISTS variable assigned1"
+            echo "printing NAMESPACE_EXISTS:"
+            echo $NAMESPACE_EXISTS
             if [[ -n $NAMESPACE_EXISTS ]]; then
               echo "entered if true condition"
               echo "Namespace '$HELM_NAMESPACE' already exists."
