chore: if false for long wait job to speed up debug process

--- a/.github/workflows/aks-deploy-alb-controller.yml
+++ b/.github/workflows/aks-deploy-alb-controller.yml
@@ -74,6 +74,7 @@ jobs:
 
       - name: Create a user managed identity for ALB controller and federate the identity as workload identity to use in the AKS cluster
         shell: bash
+        if: false
         run: |
           {
               mcResourceGroup=$(az aks show --resource-group $RESOURCE_GROUP --name $AKS_NAME --query "nodeResourceGroup" -o tsv)
