chore: pur or true condition and remove unnecessary logs

--- a/.github/workflows/aks-deploy-alb-controller.yml
+++ b/.github/workflows/aks-deploy-alb-controller.yml
@@ -109,18 +109,9 @@ jobs:
             echo "printing HELM_NAMESPACE:"
             echo $HELM_NAMESPACE
 
-            echo "printing all the namespaces"
-            kubectl get namespaces
-
-            
-            echo "creating namespace with HELM_NAMESPACE name"
-            kubectl create namespace $HELM_NAMESPACE
-            
-            echo "printing all the namespaces AGAIN"
-            kubectl get namespaces
             
             # Install ALB Controller using Helm
-            NAMESPACE_EXISTS=$(kubectl get namespaces | grep -w $HELM_NAMESPACE) # problem here
+            NAMESPACE_EXISTS=$(kubectl get namespaces | grep -w $HELM_NAMESPACE || true)            # problem here
             echo "NAMESPACE_EXISTS variable assigned1"
             echo "printing NAMESPACE_EXISTS:"
             echo $NAMESPACE_EXISTS
