--- a/.github/workflows/vm-vnet-ez.yml
+++ b/.github/workflows/vm-vnet-ez.yml
@@ -29,7 +29,7 @@ jobs:
           uses: actions/checkout@v2
         - name: Azure Custom Login
           shell: bash
-          run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZ_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}        
+          run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.APP_REG_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}        
         - name: Deploy resource group
           shell: bash
           run: az group create --name $RESOURCE_GROUP --location eastus      
